--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,6 +6,7 @@
 margin: 0%;
 padding: 0%;
 box-sizing: border-box;
+color: white;
 }
 
 body{
@@ -28,39 +29,6 @@ html{
     width: 110px;
     height: 110px;
 border-radius: 15px;
-
-}
-
-nav{
-    color: rgb(51, 51, 51);
-    position:sticky;
-    padding: 10px 20px 10PX 20PX;
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.aDisplay{
-    display: block;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-
-}
-.liDisplay{
-    float: left;
-}
-
-li a:hover{
-    background-color: rgb(17, 17, 17);
-}
-.ulDisplay{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(51, 51, 51);
 }
 
 
@@ -78,6 +46,31 @@ li a:hover{
     text-align:left;
     border: 1px solid  rgb(51, 51, 51);
 }
+
+.gridContainer{
+    display: grid;
+    grid-template-areas: 
+    "li li img"
+    "p p img"
+    ;
+    background-color:rgb(29, 27, 27);
+    margin-top: 25px;
+    text-align: center;
+    width: 100%;
+    text-align: left;
+}
+
+.gridLi{
+grid-area: li;
+}
+
+.gridP{
+grid-area: p;
+}
+.gridImg{
+ grid-area: img;
+}
+
 .boxForm{
     background-color:  rgb(29, 27, 27);
     opacity: 1;
@@ -89,9 +82,20 @@ li a:hover{
     padding: 70px 50px;
     width: 100%;
     height: auto;
+    justify-content: space-between;
     text-align:left;
     border: 1px solid  rgb(51, 51, 51);
 }
+
+section div h1{
+    text-align: center;
+    font-display: flex;
+}
+
+section div h2{
+    text-align: center;
+    font-display: flex;
+} 
 
 .tittleBox{
     display: inline-block;
@@ -116,9 +120,74 @@ header{
  
 }
 .img{
-    display: flex;
-        float: right;
-        width: 25%;
-        padding: 5px;
-
+justify-content: right;
+width: 100%;
+height: auto;
+object-fit: contain;
 }
+
+
+@media (max-width: 560px) {
+
+
+    .gridContainer{
+        display: grid;
+        grid-template-areas: 
+        "img img img"
+        "li li li"
+        "p p p";
+        
+        background-color:rgb(29, 27, 27);
+        margin-top: 25px;
+        text-align: center;
+        width: 100%;
+        text-align: left;
+    }
+
+    .gridLi{
+        grid-area: li;
+        }
+        
+        .gridP{
+        grid-area: p;
+        }
+        .gridImg{
+         grid-area: img;
+        }
+        
+        .boxForm{
+            background-color:  rgb(29, 27, 27);
+            opacity: 1;
+            margin-bottom: 30px;
+            margin-top: 30px;
+            display: flex;
+            flex-direction: column;
+            margin-right: 25%;
+            padding: 70px 50px;
+            width: 100%;
+            height: auto;
+            justify-content: space-between;
+            text-align:left;
+            border: 1px solid  rgb(51, 51, 51);
+        }
+        
+        .boxForm2{
+            background-color:  rgb(29, 27, 27);
+            opacity: 1;
+            margin-bottom: 30px;
+            margin-top: 30px;
+            display: flex;
+            flex-direction: column;
+            margin-right: 25%;
+            padding: 70px 50px;
+            width: 100%;
+            height: auto;
+            text-align:left;
+            border: 1px solid  rgb(51, 51, 51);
+        }
+         
+
+   }    
+
+
+
