--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,12 +11,12 @@ color: white;
 
 body{
     background-attachment: fixed;
-    background-image: url(../img/background_4.jpg)
+    background-color: rgba(245, 245, 245, 0.855);
     
 }
 
 html{
-    font-size: 62.5%;
+    font-size: 100%;
     color: rgb(255, 255, 255);
 }
 
@@ -46,6 +46,25 @@ border-radius: 15px;
     text-align:left;
     border: 1px solid  rgb(51, 51, 51);
 }
+
+.boxFormiframe{
+    background-color:  rgb(29, 27, 27);
+    opacity: 1;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 25%;
+    padding: 50px 50px;
+    width: 100%;
+    height: auto;
+    text-align:left;
+    border: 1px solid  rgb(51, 51, 51);
+}
+
+
+
+
 
 .gridContainer{
     display: grid;
@@ -110,9 +129,11 @@ header{
     object-fit: contain;
 }
 
-.imgAnimation:hover img {-webkit-transform:scale(1.3);transform:scale(1.3);}
-.imgAnimation {overflow:hidden;}
 
+.bg-grey{
+    background-color:rgb(29, 27, 27);
+
+}
 
 .imgSize{
     display: block;
@@ -128,6 +149,7 @@ width: 100%;
 height: auto;
 object-fit: contain;
 }
+
 
 
 @media (max-width: 560px) {
@@ -188,9 +210,24 @@ object-fit: contain;
             text-align:left;
             border: 1px solid  rgb(51, 51, 51);
         }
-         
+   
+        .boxFormiframe{
+            background-color:  rgb(29, 27, 27);
+            opacity: 1;
+            margin-bottom: 30px;
+            margin-top: 30px;
+            display: flex;
+            flex-direction: column;
+            padding: 70px 50px;
+            width: 100%;
+            height: auto;
+            text-align:center;
+            border: 1px solid  rgb(51, 51, 51);
+        }
+
+
+
 
    }    
-
 
 
