--- a/css/main.css
+++ b/css/main.css
@@ -68,9 +68,11 @@ html {
   }
   .gridContainer Li {
     grid-area: li;
+    font-size: 1.5em;
   }
   .gridContainer P {
     grid-area: p;
+    font-size: 0.8em;
   }
   .gridContainer Img {
     grid-area: img;
@@ -116,11 +118,11 @@ html {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    height: 50%;
+    height: auto;
   }
   .img {
     justify-content: right;
-    width: 100%;
+    width: 400px;
     height: auto;
     object-fit: contain;
   }
@@ -185,6 +187,15 @@ html {
     height: auto;
     text-align: center;
     border: 1px solid rgb(51, 51, 51);
+  }
+  .bg-grey {
+    background-color: rgb(29, 27, 27);
+  }
+  .img {
+    justify-content: right;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
   }
 }
 
