--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -44,14 +44,16 @@
 
                 Li{
                 grid-area: li;
-            }
+                font-size: $textLg;
+                }
 
                 P{
                 grid-area: p;
-            }
+                font-size: $textSm;
+                }
                 Img{
                 grid-area: img;
-            }
+                }
    }
 
     .boxForm{
@@ -104,12 +106,12 @@
         margin-left: auto;
         margin-right: auto;
         width: 100%;
-        height: 50%;
+        height: auto;
     
     }
     .img{
     justify-content: right;
-    width: 100%;
+    width: 400px;
     height: auto;
     object-fit: contain;
     } 
@@ -186,8 +188,17 @@
             border: 1px solid  rgb(51, 51, 51);
         }
 
-
-
+        .bg-grey{
+            background-color:rgb(29, 27, 27);
+    
+        }    
+        .img{
+            justify-content: right;
+            width: 100%;
+            height: auto;
+            object-fit: contain;
+            } 
+        
 
    }    
 
