--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -9,7 +9,7 @@
 body{
     background-attachment: fixed;
     background-color: rgba(245, 245, 245, 0.855);
-    
+    overflow-x: hidden;
 }
 
 html{
