--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,13 @@ html {
     height: auto;
     object-fit: contain;
   }
+  .imgSize {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: auto;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
