--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -199,6 +199,15 @@
             object-fit: contain;
             } 
         
+        .imgSize{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 100%;
+            height: auto;
+            
+            }
+        
 
    }    
 
