Cambios entrega final

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@font-face {
+  font-family: "Rancho";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/rancho/v17/46kulbzmXjLaqZRVam_h.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+.font-effect-shadow-multiple {
+  text-shadow: 0.04em 0.04em 0 #fff, 0.08em 0.08em 0 #aaa;
+  -webkit-text-shadow: 0.04em 0.04em 0 #fff, 0.08em 0.08em 0 #aaa;
+}
+
 * {
   font-family: "Roboto", sans-serif;
   margin: 0%;
@@ -9,7 +21,7 @@
 
 body {
   background-attachment: fixed;
-  background-color: rgba(245, 245, 245, 0.855);
+  background-color: rgba(255, 255, 255, 0.855);
   overflow-x: hidden;
 }
 
@@ -31,7 +43,7 @@ html {
 
 @media (min-width: 1200px) {
   .boxForm2 {
-    background-color: rgba(245, 245, 245, 0.855);
+    background-color: rgba(255, 255, 255, 0.855);
     opacity: 1;
     margin-bottom: 30px;
     margin-top: 30px;
@@ -42,6 +54,9 @@ html {
     width: 100%;
     height: auto;
     text-align: left;
+  }
+  .logoColor {
+    color: rgb(153, 59, 47);
   }
   .boxFormiframe {
     background-color: rgb(29, 27, 27);
@@ -59,7 +74,7 @@ html {
   .gridContainer {
     display: grid;
     grid-template-areas: "h3 h3 img" "p p img";
-    background-color: rgba(245, 245, 245, 0.855);
+    background-color: rgba(255, 255, 255, 0.855);
     margin-top: 25px;
     width: 100%;
     text-align: left;
@@ -75,8 +90,34 @@ html {
   .gridContainer Img {
     grid-area: img;
   }
+  .gridContainerProductosEmpanadas {
+    display: grid;
+    grid-template-areas: "Box1 Box2 Box3" "Box4 Box5 Box6";
+  }
+  .gridContainerProductosPizza {
+    display: grid;
+    grid-template-areas: "Box1 Box2" "Box3 Box4" "Box5 Box6";
+  }
+  .Box1 {
+    grid-area: Box1;
+  }
+  .Box2 {
+    grid-area: Box2;
+  }
+  .Box3 {
+    grid-area: Box3;
+  }
+  .Box4 {
+    grid-area: Box4;
+  }
+  .Box5 {
+    grid-area: Box5;
+  }
+  .Box6 {
+    grid-area: Box6;
+  }
   .boxForm {
-    background-color: rgba(245, 245, 245, 0.855);
+    background-color: rgba(255, 255, 255, 0.855);
     opacity: 1;
     margin-bottom: 30px;
     margin-top: 30px;
@@ -100,7 +141,7 @@ html {
     object-fit: contain;
   }
   .bg-grey {
-    background-color: rgba(245, 245, 245, 0.855);
+    background-color: rgba(255, 255, 255, 0.855);
   }
   .imgSize {
     display: block;
@@ -120,7 +161,7 @@ html {
   .gridContainer {
     display: grid;
     grid-template-areas: "img img img" "h3 h3 h3" "p p p";
-    background-color: rgba(245, 245, 245, 0.855);
+    background-color: rgba(255, 255, 255, 0.855);
     margin-top: 25px;
     text-align: center;
     width: 100%;
@@ -135,8 +176,34 @@ html {
   .gridContainer Img {
     grid-area: img;
   }
+  .gridContainerProductosEmpanadas {
+    display: grid;
+    grid-template-areas: "Box1" "Box2" "Box3" "Box4" "Box5" "Box6";
+  }
+  .gridContainerProductosPizza {
+    display: grid;
+    grid-template-areas: "Box1" "Box2" "Box3" "Box4" "Box5" "Box6";
+  }
+  .Box1 {
+    grid-area: Box1;
+  }
+  .Box2 {
+    grid-area: Box2;
+  }
+  .Box3 {
+    grid-area: Box3;
+  }
+  .Box4 {
+    grid-area: Box4;
+  }
+  .Box5 {
+    grid-area: Box5;
+  }
+  .Box6 {
+    grid-area: Box6;
+  }
   .boxForm {
-    background-color: rgba(245, 245, 245, 0.855);
+    background-color: rgba(255, 255, 255, 0.855);
     opacity: 1;
     margin-bottom: 30px;
     margin-top: 30px;
@@ -150,7 +217,7 @@ html {
     text-align: left;
   }
   .boxForm2 {
-    background-color: rgba(245, 245, 245, 0.855);
+    background-color: rgba(255, 255, 255, 0.855);
     opacity: 1;
     margin-bottom: 30px;
     margin-top: 30px;
@@ -163,7 +230,7 @@ html {
     text-align: left;
   }
   .boxFormiframe {
-    background-color: rgba(245, 245, 245, 0.855);
+    background-color: rgba(255, 255, 255, 0.855);
     opacity: 1;
     margin-bottom: 30px;
     margin-top: 30px;
@@ -175,7 +242,7 @@ html {
     text-align: center;
   }
   .bg-grey {
-    background-color: rgba(245, 245, 245, 0.855);
+    background-color: rgba(255, 255, 255, 0.855);
   }
   .img {
     justify-content: right;
@@ -189,6 +256,9 @@ html {
     margin-right: auto;
     width: 100%;
     height: auto;
+  }
+  .logoColor {
+    color: rgb(153, 59, 47);
   }
 }
 
