--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -129,6 +129,10 @@
     }
 
 
+    .carouselImg{
+        object-fit: contain;
+    } 
+    
     .imgSize{
         display: block;
         margin-left: auto;
@@ -139,9 +143,10 @@
     }
     .img{
     justify-content: right;
-    width: 400px;
+    width: 100%;
     height: auto;
     object-fit: contain;
+    border-radius: 5%;
     } 
  }
 @include media (mobile){
@@ -265,6 +270,8 @@
             width: 100%;
             height: auto;
             object-fit: contain;
+            border-radius: 5%;
+
             } 
         
         .imgSize{
