--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,9 @@ html {
   .bg-grey {
     background-color: rgba(255, 255, 255, 0.855);
   }
+  .carouselImg {
+    object-fit: contain;
+  }
   .imgSize {
     display: block;
     margin-left: auto;
@@ -152,9 +155,10 @@ html {
   }
   .img {
     justify-content: right;
-    width: 400px;
+    width: 100%;
     height: auto;
     object-fit: contain;
+    border-radius: 5%;
   }
 }
 @media (max-width: 560px) {
@@ -249,6 +253,7 @@ html {
     width: 100%;
     height: auto;
     object-fit: contain;
+    border-radius: 5%;
   }
   .imgSize {
     display: block;
